photo get all, create, upload file, validate file, cloudinary
