# models/photo.go
@@ -7,21 +7,35 @@ import (
 
 type Photo struct {
 	Base
-	Title    string    `gorm:"not null" json:"title" form:"title" valid:"required~title is required"`
-	Caption  string    `gorm:"not null" json:"caption" form:"caption" valid:"required~caption is required"`
-	PhotoURL string    `gorm:"not null" json:"photo_url" form:"photo_url" valid:"required~photo URL is required"`
-	UserID   uint      `json:"user_id"`
-	Comments []Comment `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;" json:"comments"`
+	Title    string `gorm:"not null"`
+	Caption  string `gorm:"not null"`
+	PhotoURL string `gorm:"not null"`
+	UserID   uint
+	User     User
+	Comments []Comment `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
 }
 
 func (p *Photo) BeforeCreate(tx *gorm.DB) (err error) {
 	// validate input
-	_, err = govalidator.ValidateStruct(p)
+	input := PhotoCreateInput{
+		Title:    p.Title,
+		Caption:  p.Caption,
+		PhotoURL: p.PhotoURL,
+		UserID:   p.UserID,
+	}
+	_, err = govalidator.ValidateStruct(input)
 	return
 }
 
 func (p *Photo) BeforeUpdate(tx *gorm.DB) (err error) {
 	// validate input
-	_, err = govalidator.ValidateStruct(p)
+	input := PhotoUpdateInput{
+		ID:       p.ID,
+		Title:    p.Title,
+		Caption:  p.Caption,
+		PhotoURL: p.PhotoURL,
+		UserID:   p.UserID,
+	}
+	_, err = govalidator.ValidateStruct(input)
 	return
 }
